--- a/index.html
+++ b/index.html
@@ -15,28 +15,30 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100i,200,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
-
   <section id="carousel">
     <div id="start-logo">
-      <img alt="logo" src="images/pied-piper-logo-secondary.png" />
+      <img alt="logo" src="images/pied-piper-logo-secondary.png" id="start-image" />
     </div>
     <div id="carousel-text">
       <h1>The Internet We Deserve</h1>
     </div>
-    <img class="carousel-image" src="images/sv-cover.jpeg" />
-    <img class="carousel-image hidden" src="images/sv-garage.jpg" />
-    <img class="carousel-image hidden" src="images/sv-conference.jpg" />
-    <img class="carousel-image hidden" src="images/sv-pair-programming.jpg" />
+    <div id="image-box">
+      <img class="carousel-image w3-animate-fading" src="images/sv-cover.jpeg" />
+      <img class="carousel-image w3-animate-fading" src="images/sv-garage.jpg" />
+      <img class="carousel-image w3-animate-fading" src="images/sv-conference.jpg" />
+      <img class="carousel-image w3-animate-fading" src="images/sv-pair-programming.jpg" />
+    </div>
   </section>
 
-  <header>
+  <header id="header">
     <div id="logo">
       <img src="images/pied_piper_logo.png" alt="">
     </div>
-    <nav>
+    <nav id="navbar">
       <div class="nav-item">
         <a href="">The Box</a>
       </div>
@@ -52,7 +54,7 @@
   <section id='product'>
     <h2>Introducing The Box</h2>
     <div class="flex">
-      <p>
+      <p id="box-desc">
         The Box is a very, very exciting new data backup device that uses Pied Piper’s next-level compression algorithm
         to store duplicate copies of vast quantities of data. It is fun; it is sexy; it is the future of information
         safeguarding hardware. I am tingling just writing about it. So even in the event of a catastrophic system
@@ -61,7 +63,7 @@
         corporation, or even a large government agency
       </p>
       <div id="productmockup">
-        <img src="images/the_box.png" alt="The Box product" />
+        <img src="images/the_box.png" alt="The Box product" id="box-pic" />
       </div>
     </div>
   </section>
@@ -71,38 +73,56 @@
     <div class="wrap">
       <div class="projects">
         <h1>Aviatto</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
         <button>DEMO</button>
       </div>
       <div class="projects">
         <h1>Bit Soup</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
         <button>DEMO</button>
       </div>
       <div class="projects">
         <h1>Hooli</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
         <button>DEMO</button>
       </div>
       <div class="projects">
         <h1>Internet Radio by Russ Hanneman</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
         <button>DEMO</button>
       </div>
       <div class="projects">
         <h1>Nucleus</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
         <button>DEMO</button>
       </div>
       <div class="projects">
         <h1>Project Title</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+        </p>
         <button>DEMO</button>
       </div>
     </div>
