initial commit. Styling mostly done, some animations need tweeking

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100i,200,300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="index.js" defer></script>
 </head>
 
 <body>
@@ -32,9 +33,9 @@
     <img class="carousel-image hidden" src="images/sv-pair-programming.jpg" />
   </section>
 
-  <header>
+  <header id="navbar">
     <div id="logo">
-      <img src="images/pied_piper_logo.png" alt="">
+      <img src="images/pied_piper_logo.png" alt="Pied Piper logo">
     </div>
     <nav>
       <div class="nav-item">
@@ -52,7 +53,7 @@
   <section id='product'>
     <h2>Introducing The Box</h2>
     <div class="flex">
-      <p>
+      <p id="productPara">
         The Box is a very, very exciting new data backup device that uses Pied Piper’s next-level compression algorithm
         to store duplicate copies of vast quantities of data. It is fun; it is sexy; it is the future of information
         safeguarding hardware. I am tingling just writing about it. So even in the event of a catastrophic system
@@ -110,9 +111,6 @@
   </section>
   <footer>
   </footer>
-
-
-  <script src="index.js" async defer></script>
 </body>
 
 </html>
